kubernetes/deploy-db.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: weeve-db
  labels:
    app: weeve-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: weeve-db
  template:
    metadata:
      labels:
        app: weeve-db
    spec:
      containers:
        - name: mysql
          image: mysql:5
          ports:
            - containerPort: 3306
              name: mysql
