kubernetes/deploy-ui.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: weeve-ui
spec:
  selector:
    matchLabels:
      app: weeve-ui
  replicas: 1
  template:
    metadata:
      labels:
        app: weeve-ui
    spec:
      containers:
      - name: weeve-ui
        image: gcr.io/weeve-ct/weeve-ui:latest
        ports:
        - containerPort: 80
