kubernetes/svc-clusterip-db.yaml
apiVersion: v1
kind: Service
metadata:
  name: weeve-db
  labels:
    app: weeve-db
spec:
  ports:
  - port: 3306
    protocol: TCP
    name: mysql
  selector:
    app: weeve-db
