kubernetes/svc-nodeport-api.yaml
apiVersion: v1
kind: Service
metadata:
  name: weeve-api
  labels:
    app: weeve-api
spec:
  type: NodePort
  selector:
    app: weeve-api
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
