kubernetes/svc-nodeport-ui.yaml
apiVersion: v1
kind: Service
metadata:
  name: weeve-ui
  labels:
    app: weeve-ui
spec:
  type: NodePort
  selector:
    app: weeve-ui
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
